refactor: structure